--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <header>
         <nav>
-            <a href="#">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
-                <li><a href="#">Студія</a></li>
+                <li><a href="./index.html">Студія</a></li>
                 <li><a href="#">Портфоліо</a></li>
                 <li><a href="#">Контакти</a></li>
             </ul>
@@ -30,19 +30,19 @@
             <h2>Особливості</h2>
             <ul>
                 <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <h3>Увага до деталей</h3>
                     <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <h3>Пунктуальність</h3>
                     <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h3>ПЛАНУВАННЯ</h3>
+                    <h3>Планування</h3>
                     <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <h3>Сучасні технології</h3>
                     <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
@@ -61,28 +61,28 @@
                 <li>
                     <img src="./images/photo1.jpg" alt="Молодий чоловік в темній сорочці" width="270">
                     <h3>Ігор Дем'яненко</h3>
-                    <p>Product Designer</p>
+                    <p lang="en">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/photo2.jpg" alt="Дівчина блондинка в окулярах" width="270">
                     <h3>Ольга Рєпіна</h3>
-                    <p>Frontend Developer</p>
+                    <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/photo3.jpg" alt="Молодий чоловік в світлій сорочці" width="270">
                     <h3>Микола Тарасов</h3>
-                    <p>Marketing</p>
+                    <p lang="en">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/photo4.jpg" alt="Молодий чоловік в окулярах в темній футболці" width="270">
                     <h3>Михайло Єрмаков</h3>
-                    <p>UI Designer</p>
+                    <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="#">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <address>
             <ul>
                 <li><a href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv?hl=ru" target="_blank" rel="noreferrer nofollow noopener">м. Київ, пр-т Лесі Українки, 26</a></li>
